# netpharm

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  docs.yml  format.yml  python-ci.yml  release.yml  security.yml
config/: config.yaml
docs/: DESIGN.md
packaging/: README_PACKAGING.md  build.py  build_linux.sh  build_macos.sh  build_windows.bat  desktop_launcher.py  netpharm.spec
src/netpharm/: __init__.py  cli.py  config.py  db.py  logging_setup.py  networks.py  orchestrator.py
src/netpharm/agents/: __init__.py  adme.py  base.py  cytoscape.py  disease.py  enrichment.py  extractor.py  hubgenes.py  intersection.py  ppi.py  report.py  standardize.py  targets.py
src/netpharm/ui/: streamlit_app.py
tests/: test_core_agents.py
