[project]
name = "netpharm"
version = "0.1.0"
description = "Multi-agent Network Pharmacology platform"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
